src/tess/tl/test/fail/test_fail_alias_chain.tl
#module Foo
f() { 1 }

#module main
#alias F Foo
#alias G F

main() { G.f() }
